2004-03-12  Quentin Mathe <qmathe@club-internet.fr>

        * Source/GSToolbarView.m: Bug fixes related to clipped items and more
	efficient code.
	* Headers/Additions/GNUstepGUI/GSToolbarView.h: Minor changes.
        * Source/NSToolbar.m: Refactored NSToolbar implementation, most part of
	the code has moved to GSToolbar.
        * Headers/AppKit/NSToolbar.h: Same.
	* Source/GSToolbar.m: New class which implements functionnality for the
	basic GNUstep toolbars with some bug fixes.
        * Headers/Additions/GNUstepGUI/GSToolbar.h: Header for the new basic
	GNUstep toolbar class.
	* Source/NSWindow+Toolbar.m: Bug fixes.
	* Source/NSWindow+Toolbar.h: Minor changes.

2004-03-12 15:30  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTableView.m (-mouseDown:): Send our action if we get
	a single, simple (no drag) click.

2004-03-08 19:19  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSPageLayout.m (-readPrintInfo): Move declarations before
	statements.

2004-03-08 19:04  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSComboBoxCell.m (-runModalPopUp): Don't make the popup
	the key window.

2004-03-08  Fred Kiefer <FredKiefer@gmx.de>

	* Header/AppKit/NSView.h:
	Added ivars _is_hidden, _in_live_resize and _focusRingType.
	* Source/NSView.m: 
	(-canDraw) fully implemented. (-displayIfNeededInRectIgnoringOpacity:,
	-displayRectIgnoringOpacity:) use canDraw. (-setFocusRingType:,
	-focusRingType, -needsToDrawRect:, -isHidden, -setHidden:,
	-inLiveResize, -viewWillStartLiveResize, -viewDidEndLiveResize)
	implemented. (-canBecomeKeyView) use isHiddenOrHasHiddenAncestor
	instead of isHidden.
	
2004-03-07  Adam Fedor  <fedor@gnu.org>

	* Documentation/Gui/Gui.gsdoc: Use automatic indexing
	* Source/DocMakefile (AUTOGSDOC_HEADERS_GUI): Add NSNib, NSOpenGL
	NSOpenGLView.
	* Source/NSNib.m: Fix doc markup typo.

2004-03-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSActionCell.m: 
	Removed methods -setFloatValue:, -setIntValue: and setDoubleValue:
