@@ -1,3 +1,13 @@
+2004-03-13 03:19  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/NSLayoutManager.m
+	(-textStorage:edited:range:changeInLength:invalidatedRange:): Handle
+ 	the case where layout_char is inside the modified range explicitly to
+	avoid accidentally causing the value to wrap around.
+
+	(-drawGlyphsForGlyphRange:atPoint:): Remove dead (since the change
+	2003-11-01) code. Update comments.
+
 2004-03-12  Quentin Mathe <qmathe@club-internet.fr>
 
         * Source/GSToolbarView.m: Bug fixes related to clipped items and more
